force-app/main/default/objects/Application__c/fields/Loan_Document_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Loan_Document_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Document Accepted</label>
    <type>Checkbox</type>
</CustomField>