force-app/main/default/objects/Application__c/fields/Loan_Document_Accepted_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Loan_Document_Accepted_DateTime__c</fullName>
    <label>Loan Document Accepted Date</label>
    <type>DateTime</type>
</CustomField>