force-app/main/default/objects/Application__c/fields/Loan_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Process_Type__c</fullName>
    <label>Loan Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traditional</fullName>
                <default>true</default>
                <label>Traditional</label>
            </value>
            <value>
                <fullName>Re-Write</fullName>
            </value>
            <value>
                <fullName>RBO</fullName>
            </value>
            <value>
                <fullName>Consolidated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>