force-app/main/default/objects/Application__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <inlineHelpText>Product that the customer is applying for.</inlineHelpText>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affirm Financial MasterCard</fullName>
            </value>
            <value>
                <fullName>Affirm Financial Term Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>