force-app/main/default/objects/Application__c/fields/manual_auto_authentication__c.field-meta.xml
<CustomField>
    <fullName>manual_auto_authentication__c</fullName>
    <formula>IF(((text(Email_Authentication_Status__c) &lt;&gt; &apos;&apos;) || (text(Authentication_Result__c) &lt;&gt; &apos;Passed&apos;) || (text(Fraud_Alert__c) &lt;&gt; &apos;FALSE&apos;)),&apos;Manual Authentication&apos;,
IF(((text(Email_Authentication_Status__c) == &apos;&apos;) &amp;&amp; (text(Authentication_Result__c) == &apos;Passed&apos;) &amp;&amp; (text(Fraud_Alert__c) == &apos;FALSE&apos;)),&apos;Auto Authentication&apos;,&apos;OTHER&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manual/Auto Authentication</label>
    <type>Text</type>
</CustomField>