force-app/main/default/objects/Application__c/fields/Manual_Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manual_Review_Reason__c</fullName>
    <description>Manual Review Reason</description>
    <inlineHelpText>Manual Review Reason</inlineHelpText>
    <label>Manual Review Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multiple Exact Matches</fullName>
            </value>
            <value>
                <fullName>Multiple Uncertain Matches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>