force-app/main/default/objects/Application__c/fields/Month_Since_BK_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Month_Since_BK_Discharge__c</fullName>
    <description>Month Since BK Discharge</description>
    <inlineHelpText>Month Since BK Discharge</inlineHelpText>
    <label>Month Since BK Discharge</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>