force-app/main/default/objects/Application__c/fields/Monthly_Home_Expense__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Home_Expense__c</fullName>
    <label>Monthly Home Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>