force-app/main/default/objects/Application__c/fields/Months_At_Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>Months_At_Permanent_Address__c</fullName>
    <label>Months At Permanent Address</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>