force-app/main/default/objects/Application__c/fields/Months_Since_Bad_Debt_Write_Off__c.field-meta.xml
<CustomField>
    <fullName>Months_Since_Bad_Debt_Write_Off__c</fullName>
    <description>Months Since Bad Debt Write Off</description>
    <inlineHelpText>Months Since Bad Debt Write Off</inlineHelpText>
    <label>Months Since Bad Debt Write Off</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>