force-app/main/default/objects/Application__c/fields/Mothers_Maiden_Name__c.field-meta.xml
<CustomField>
    <fullName>Mothers_Maiden_Name__c</fullName>
    <inlineHelpText>Stores mother&apos;s maiden name from Auto Authentication.</inlineHelpText>
    <label>Mothers Maiden Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>