force-app/main/default/objects/Application__c/fields/Needs_Manual_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Manual_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Needs Manual Review</description>
    <inlineHelpText>Needs Manual Review</inlineHelpText>
    <label>Needs Manual Review</label>
    <type>Checkbox</type>
</CustomField>