force-app/main/default/objects/Application__c/fields/new_decision__c.field-meta.xml
<CustomField>
    <fullName>new_decision__c</fullName>
    <formula>IF(((text(Decision__c) == &apos;Approved&apos;) || (text(Decision__c) == &apos;Referred&apos;)) &amp;&amp; ((text(Application_Status__c) == &apos;Expired&apos;) || (text(Application_Status__c) == &apos;Duplicate&apos;)), &apos;Expired/Duplicate&apos;, 
IF((text(Decision__c) == &apos;Approved&apos;) , &apos;Approved-Open&apos;, 
IF((text(Decision__c) == &apos;Referred&apos;) , &apos;Referred-Open&apos;, text(Decision__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Decision</label>
    <type>Text</type>
</CustomField>