force-app/main/default/objects/Application__c/fields/no_of_days_since_last_decision_date__c.field-meta.xml
<CustomField>
    <fullName>no_of_days_since_last_decision_date__c</fullName>
    <formula>IF(text(Decision__c)= &apos;Completed&apos; || text(Decision__c)=&apos;Declined&apos;, Decision_Timestamp__c - Application_Date__c, Now() - Application_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. Of Days Since Last Decision Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>