force-app/main/default/objects/Application__c/fields/Number_of_Dependants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dependants__c</fullName>
    <label>Number of Dependants</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>More</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>