force-app/main/default/objects/Application__c/fields/Offer_Code_Origination_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Offer_Code_Origination_System_Id__c</fullName>
    <label>Offer Code Origination System Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>