force-app/main/default/objects/Application__c/fields/Paid_Direct_Depost__c.field-meta.xml
<CustomField>
    <fullName>Paid_Direct_Depost__c</fullName>
    <label>Paid Direct Depost</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>