force-app/main/default/objects/Application__c/fields/PAP_Information_I_Accept__c.field-meta.xml
<CustomField>
    <fullName>PAP_Information_I_Accept__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAP Information Accepted</label>
    <type>Checkbox</type>
</CustomField>