force-app/main/default/objects/Application__c/fields/Past_Consumer_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Past_Consumer_Proposal__c</fullName>
    <label>Past Consumer Proposal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>