force-app/main/default/objects/Application__c/fields/Pay_Day__c.field-meta.xml
<CustomField>
    <fullName>Pay_Day__c</fullName>
    <label>Pay Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>