force-app/main/default/objects/Application__c/fields/Payday_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payday_Loan_Amount__c</fullName>
    <label>Payday Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>