force-app/main/default/objects/Application__c/fields/PEFP_When_Held__c.field-meta.xml
<CustomField>
    <fullName>PEFP_When_Held__c</fullName>
    <label>PEFP When Held</label>
    <length>100</length>
    <type>Text</type>
</CustomField>