force-app/main/default/objects/Application__c/fields/Permanent_Address_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_Street_Number__c</fullName>
    <label>Permanent Address 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>