force-app/main/default/objects/Application__c/fields/Politically_Exposed_Foreign_Person__c.field-meta.xml
<CustomField>
    <fullName>Politically_Exposed_Foreign_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Politically Exposed Foreign Person</label>
    <type>Checkbox</type>
</CustomField>