force-app/main/default/objects/Application__c/fields/Previous_Address_Province__c.field-meta.xml
<CustomField>
    <fullName>Previous_Address_Province__c</fullName>
    <label>Previous Address Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>