force-app/main/default/objects/Application__c/fields/Previous_Employer_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_Address_Type__c</fullName>
    <label>Previous Employer Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>