force-app/main/default/objects/Application__c/fields/Previous_Employer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_Phone__c</fullName>
    <label>Previous Employer Phone</label>
    <type>Phone</type>
</CustomField>