force-app/main/default/objects/Application__c/fields/Previous_Employer_Province__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_Province__c</fullName>
    <label>Previous Employer State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>