force-app/main/default/objects/Application__c/fields/Previous_Employment_Years__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employment_Years__c</fullName>
    <label>Previous Employment Years</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>