force-app/main/default/objects/Application__c/fields/Previous_Gross_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Previous_Gross_Monthly_Income__c</fullName>
    <label>Previous Gross Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>