force-app/main/default/objects/Application__c/fields/Previous_Income_Interval__c.field-meta.xml
<CustomField>
    <fullName>Previous_Income_Interval__c</fullName>
    <description>Previous Income Interval</description>
    <inlineHelpText>Previous Income Interval</inlineHelpText>
    <label>Previous Income Interval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>