force-app/main/default/objects/Application__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <description>Program Name</description>
    <inlineHelpText>Program Name</inlineHelpText>
    <label>Program Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>