force-app/main/default/objects/Application__c/fields/Program_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Product_Name__c</fullName>
    <description>Program Product Name</description>
    <inlineHelpText>Program Product Name</inlineHelpText>
    <label>Program Product Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>