force-app/main/default/objects/Application__c/fields/Program_Tier_Id__c.field-meta.xml
<CustomField>
    <fullName>Program_Tier_Id__c</fullName>
    <description>Program Tier Id</description>
    <inlineHelpText>Program Tier Id</inlineHelpText>
    <label>Program Tier Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>