force-app/main/default/objects/Application__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>