force-app/main/default/objects/Application__c/fields/Record_Last_Updated_In_Staging__c.field-meta.xml
<CustomField>
    <fullName>Record_Last_Updated_In_Staging__c</fullName>
    <label>Record Last Updated In Staging</label>
    <type>DateTime</type>
</CustomField>