force-app/main/default/objects/Application__c/fields/Referral_ID__c.field-meta.xml
<CustomField>
    <fullName>Referral_ID__c</fullName>
    <label>Referral ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AaronAcceptance</fullName>
            </value>
            <value>
                <fullName>AdsumFinancial-LateefKhaliq</fullName>
            </value>
            <value>
                <fullName>AlpineCredits</fullName>
            </value>
            <value>
                <fullName>AMCI</fullName>
            </value>
            <value>
                <fullName>AMP-DellaDwyer</fullName>
            </value>
            <value>
                <fullName>AMP-HeatherBovard</fullName>
            </value>
            <value>
                <fullName>AOneFinancialServices</fullName>
            </value>
            <value>
                <fullName>BaxMortgages</fullName>
            </value>
            <value>
                <fullName>Bayfield-TGiandomenico</fullName>
            </value>
            <value>
                <fullName>Bayfield-VicHamilton</fullName>
            </value>
            <value>
                <fullName>BDO-DougHWright</fullName>
            </value>
            <value>
                <fullName>BFG-RandallOlivares</fullName>
            </value>
            <value>
                <fullName>BMS-TAPonrajah</fullName>
            </value>
            <value>
                <fullName>BNASolutionsLtd</fullName>
            </value>
            <value>
                <fullName>Borrowell</fullName>
            </value>
            <value>
                <fullName>BromwichANDSmith</fullName>
            </value>
            <value>
                <fullName>BSCC</fullName>
            </value>
            <value>
                <fullName>CanadaCredit</fullName>
            </value>
            <value>
                <fullName>CanadaCreditCompany</fullName>
            </value>
            <value>
                <fullName>CapitalCreditCanada</fullName>
            </value>
            <value>
                <fullName>CCA</fullName>
            </value>
            <value>
                <fullName>CDPC</fullName>
            </value>
            <value>
                <fullName>CentumDirect-AlanFong</fullName>
            </value>
            <value>
                <fullName>CentumDirect-GavinLi</fullName>
            </value>
            <value>
                <fullName>CentumDirect-PatSequeira</fullName>
            </value>
            <value>
                <fullName>CentumDirect-SeanHo</fullName>
            </value>
            <value>
                <fullName>Centum-HKalanzakos</fullName>
            </value>
            <value>
                <fullName>Centum-JanLi</fullName>
            </value>
            <value>
                <fullName>Centum-JNasarzewski</fullName>
            </value>
            <value>
                <fullName>Centum-MariaTse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>