force-app/main/default/objects/Application__c/fields/Regular_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Regular_Payment_Amount__c</fullName>
    <label>Regular Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>