force-app/main/default/objects/Application__c/fields/Requested_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Requested_Credit_Limit__c</fullName>
    <label>Requested Credit Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>