force-app/main/default/objects/Application__c/fields/Revolving_Debt_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Revolving_Debt_Utilization__c</fullName>
    <description>Revolving Debt Utilization (last 6 months)</description>
    <inlineHelpText>Revolving Debt Utilization (last 6 months)</inlineHelpText>
    <label>Revolving Debt Utilization</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>