force-app/main/default/objects/Application__c/fields/Sales_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_Id__c</fullName>
    <description>Sales Channel Id</description>
    <inlineHelpText>Sales Channel Id</inlineHelpText>
    <label>Sales Channel Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>